tests/e2e/semantics/inference.error
Error: syntax error in story at line 5, column 1

5|    d = c
      ^

E0100: Can't assign `int` to `string`
